<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/view_budaya"
        android:layout_width="0dp"
        android:layout_height="230dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_budaya"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_budaya_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/view_budaya"
        app:layout_constraintStart_toStartOf="@id/view_budaya"
        app:layout_constraintBottom_toTopOf="@id/tv_budaya_desc"
        tools:text="@string/budaya_title" />

    <TextView
        android:id="@+id/tv_budaya_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="156dp"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/tv_budaya_title"
        app:layout_constraintStart_toStartOf="@id/tv_budaya_title"
        app:layout_constraintEnd_toEndOf="@id/view_budaya"
        app:layout_constraintBottom_toTopOf="@id/btn_selengkapnya"
        tools:text="@string/budaya_desc"/>

    <ImageView
        android:id="@+id/iv_budaya"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="32dp"
        tools:src="@color/white"
        app:layout_constraintTop_toTopOf="@id/view_budaya"
        app:layout_constraintEnd_toEndOf="@id/view_budaya"
        app:layout_constraintBottom_toBottomOf="@id/view_budaya"
        android:contentDescription="@string/gambar_budaya" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_selengkapnya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/white"
        android:drawableEnd="@drawable/ic_forward_arrow"
        android:text="@string/label_selangkapnya"
        android:textColor="@color/black"
        android:textAllCaps="false"
        app:cornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_budaya_desc"
        app:layout_constraintStart_toStartOf="@id/tv_budaya_desc"
        app:layout_constraintBottom_toBottomOf="@id/view_budaya"
        tools:ignore="DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>