<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/iv_detail"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:scaleType="fitXY"
        tools:src="@color/primary"
        app:riv_corner_radius="20dp"
        android:contentDescription="@string/gambar_detail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintStart_toStartOf="@id/iv_detail"
        app:layout_constraintBottom_toBottomOf="@id/iv_detail"
        app:layout_constraintEnd_toEndOf="@id/iv_detail" />

    <View
        android:id="@+id/view_detail"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/bg_button"
        app:layout_constraintTop_toBottomOf="@id/tv_divider"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view_favorite"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_favorite"
        app:layout_constraintTop_toTopOf="@id/tv_divider"
        app:layout_constraintEnd_toEndOf="@id/view_detail" />

    <ImageView
        android:id="@+id/iv_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_heart_empty"
        android:contentDescription="@string/icon_back"
        app:layout_constraintTop_toTopOf="@id/view_favorite"
        app:layout_constraintStart_toStartOf="@id/view_favorite"
        app:layout_constraintEnd_toEndOf="@id/view_favorite"
        app:layout_constraintBottom_toBottomOf="@id/view_favorite"/>

    <TextView
        android:id="@+id/tv_detail_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:text="@string/budaya_title"
        app:layout_constraintTop_toTopOf="@id/view_detail"
        app:layout_constraintStart_toStartOf="@id/view_detail"
        app:layout_constraintEnd_toEndOf="@id/view_detail"/>

    <TextView
        android:id="@+id/tv_creator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="12sp"
        tools:text="@string/detail_creator"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_title"
        app:layout_constraintStart_toStartOf="@id/tv_detail_title"
        app:layout_constraintEnd_toEndOf="@id/view_detail" />

    <ScrollView
        android:id="@+id/sv_detail_desc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_creator"
        app:layout_constraintStart_toStartOf="@id/tv_creator"
        app:layout_constraintEnd_toEndOf="@id/view_detail"
        app:layout_constraintBottom_toBottomOf="@id/view_detail">

        <TextView
            android:id="@+id/tv_detail_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="12sp"
            tools:text="@string/budaya_desc"/>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>