<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/iv_comment"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_photo"
        app:riv_corner_radius="50dp"
        android:contentDescription="@string/gambar_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_comment_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/iv_comment"
        app:layout_constraintStart_toEndOf="@id/iv_comment"
        app:layout_constraintBottom_toTopOf="@id/tv_comment_message"
        tools:text="@string/comment_name" />

    <TextView
        android:id="@+id/tv_comment_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/tv_comment_name"
        app:layout_constraintStart_toEndOf="@id/iv_comment"
        app:layout_constraintBottom_toBottomOf="@id/iv_comment"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/comment_message"/>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_button"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/iv_comment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>