<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/tv_halo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/hello" />

    <TextView
        android:id="@+id/tv_betawinese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/tv_halo"
        app:layout_constraintStart_toEndOf="@id/tv_halo"
        android:text="@string/betawinese" />

    <View
        android:id="@+id/view_babakan"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_budaya"
        android:backgroundTint="@color/primary"
        app:layout_constraintTop_toBottomOf="@id/tv_betawinese"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_setu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/view_babakan"
        app:layout_constraintStart_toStartOf="@id/view_babakan"
        app:layout_constraintBottom_toBottomOf="@id/view_babakan"
        android:text="@string/setu_babakan" />

    <ImageView
        android:id="@+id/ic_setu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:src="@drawable/ic_location"
        app:layout_constraintTop_toTopOf="@id/view_babakan"
        app:layout_constraintEnd_toEndOf="@id/view_babakan"
        app:layout_constraintBottom_toBottomOf="@id/view_babakan"
        android:contentDescription="@string/gambar_budaya" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_budaya"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/view_babakan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_budaya"/>

    <!-- Loading Bar -->
    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>