<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">

    <View
        android:id="@+id/view_background_about_color"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_button"
        android:backgroundTint="@color/primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/view_background_about_white"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_button"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="@id/view_background_about_color"
        app:layout_constraintStart_toStartOf="@id/view_background_about_color"
        app:layout_constraintEnd_toEndOf="@id/view_background_about_color"
        app:layout_constraintBottom_toBottomOf="@id/view_background_about_color"/>

    <ScrollView
        android:id="@+id/sv_detail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/view_background_about_white"
        app:layout_constraintStart_toStartOf="@id/view_background_about_white"
        app:layout_constraintEnd_toEndOf="@id/view_background_about_white"
        app:layout_constraintBottom_toBottomOf="@id/view_background_about_white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title_setu_babakan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/title_setu_babakan"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_description_setu_babakan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:text="@string/desc_setu_babakan"
                app:layout_constraintTop_toBottomOf="@id/tv_title_setu_babakan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_web_title_setu_babakan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/title_web_setu_babakan"
                app:layout_constraintTop_toBottomOf="@id/tv_description_setu_babakan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_web_description_setu_babakan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:text="@string/desc_web_setu_babakan"
                app:layout_constraintTop_toBottomOf="@id/tv_web_title_setu_babakan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_aplikasi_title_setu_babakan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/title_aplikasi_setu_babakan"
                app:layout_constraintTop_toBottomOf="@id/tv_web_description_setu_babakan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_aplikasi_description_setu_babakan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="16dp"
                android:paddingBottom="16dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:text="@string/desc_aplikasi_setu_babakan"
                app:layout_constraintTop_toBottomOf="@id/tv_aplikasi_title_setu_babakan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/iv_setu_babakan"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:scaleType="fitXY"
        android:src="@drawable/setu_babakan_web"
        app:layout_constraintTop_toBottomOf="@id/view_background_about_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:riv_corner_radius="10dp"/>

    <TextView
        android:id="@+id/tv_sumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/sumber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>