<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <View
        android:id="@+id/view_button_detail"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/bg_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/icon_back"
        app:layout_constraintTop_toTopOf="@id/view_button_detail"
        app:layout_constraintStart_toStartOf="@id/view_button_detail"
        app:layout_constraintEnd_toEndOf="@id/view_button_detail"
        app:layout_constraintBottom_toBottomOf="@id/view_button_detail"/>

    <TextView
        android:id="@+id/tv_budaya_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/budaya_title"
        app:layout_constraintTop_toTopOf="@id/view_button_detail"
        app:layout_constraintStart_toEndOf="@id/view_button_detail"
        app:layout_constraintBottom_toBottomOf="@id/view_button_detail"/>

    <ScrollView
        android:id="@+id/sv_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/view_button_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_detail"
                android:layout_width="match_parent"
                android:layout_height="370dp"
                app:layout_constraintTop_toTopOf="@id/cl_scroll"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:listitem="@layout/item_detail" />

            <TextView
                android:id="@+id/tv_comment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/comment_title"
                app:layout_constraintTop_toBottomOf="@id/rv_detail"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/label_name"
                android:inputType="textPersonName"
                android:textColorHint="@color/text_grey"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_comment_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/secondary"
                    android:inputType="textPersonName"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_message"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/label_message"
                android:inputType="textMultiLine"
                android:textColorHint="@color/text_grey"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_message"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:backgroundTint="@color/secondary"
                    android:gravity="top|start"
                    android:lines="8"
                    android:maxLines="10"
                    android:minLines="6"
                    android:scrollbars="vertical"
                    android:inputType="textMultiLine"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_send"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                app:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:text="@string/label_send"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@id/til_message"
                app:layout_constraintEnd_toEndOf="@id/til_message"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <View
                android:id="@+id/view_background_list_comment"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_button"
                app:layout_constraintTop_toBottomOf="@id/til_message"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <View
                android:id="@+id/view_background_list_comment_white"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_button"
                android:backgroundTint="@color/white"
                app:layout_constraintTop_toTopOf="@id/view_background_list_comment"
                app:layout_constraintStart_toStartOf="@id/view_background_list_comment"
                app:layout_constraintEnd_toEndOf="@id/view_background_list_comment"
                app:layout_constraintBottom_toBottomOf="@id/view_background_list_comment"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_comment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/view_background_list_comment_white"
                app:layout_constraintBottom_toBottomOf="@id/view_background_list_comment_white"
                tools:listitem="@layout/item_comment" />

            <ImageView
                android:id="@+id/iv_empty_state_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_empty_state_comment"
                android:contentDescription="@string/icon_back"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="@id/rv_comment"
                app:layout_constraintStart_toStartOf="@id/rv_comment"
                app:layout_constraintEnd_toEndOf="@id/rv_comment"
                app:layout_constraintBottom_toBottomOf="@id/rv_comment"/>

            <TextView
                android:id="@+id/tv_empty_state_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/text_grey"
                android:textSize="16sp"
                android:text="@string/empty_state_comment"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/iv_empty_state_comment"
                app:layout_constraintStart_toStartOf="@id/rv_comment"
                app:layout_constraintEnd_toEndOf="@id/rv_comment"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <!-- Loading Bar -->
    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>